--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
 
       <div class="actions">
         <button id="submitBtn">提交到展示页</button>
-        <button id="copyBtn" class="secondary" title="复制展示页链接">复制展示链接</button>
         <button id="resetBtn" class="secondary">重置</button>
         <div class="sum-tip sub">权重合计：<span id="weightSum" class="bad">0%</span>（需等于100%才可提交）</div>
       </div>
@@ -135,8 +134,7 @@
       const canSubmit = s === 100
       const tip = canSubmit ? '权重已达100%，可提交' : '成长权重合计需等于100%'
       const submit = document.getElementById('submitBtn')
-      const copy = document.getElementById('copyBtn')
-      submit.disabled = !canSubmit; submit.title = tip; copy.disabled = !canSubmit; copy.title = tip + '（复制前请满足要求）'
+      submit.disabled = !canSubmit; submit.title = tip;
     }
     function render () {
       const weighted = computeWeighted()
@@ -189,10 +187,8 @@
       const tag = tagEl && tagEl.value ? tagEl.value.trim() : ''
       return { id: genId(), title, tag, dims: [...dims], scores: [...state.scores], weights: [...state.weights], weighted: computeWeighted(), submittedAt: new Date().toISOString(), version: 1 }
     }
-    async function copy (text) { try { await navigator.clipboard.writeText(text); return true } catch (e) { const ta = document.createElement('textarea'); ta.value = text; document.body.appendChild(ta); ta.select(); document.execCommand('copy'); ta.remove(); return true } }
     function goDisplay (payload) { const key = 'radarPayload:' + payload.id; localStorage.setItem(key, JSON.stringify(payload)); const url = `display.html?id=${encodeURIComponent(payload.id)}`; location.href = url }
     document.getElementById('submitBtn').addEventListener('click', () => { if (sumWeights() !== 100) { alert('请将六个权重数值调整为合计 100%'); return } const payload = buildPayload(); goDisplay(payload) })
-    document.getElementById('copyBtn').addEventListener('click', async () => { if (sumWeights() !== 100) { alert('请先将权重合计调整为 100% 再复制链接'); return } const payload = buildPayload(); const key = 'radarPayload:' + payload.id; localStorage.setItem(key, JSON.stringify(payload)); const url = location.origin + location.pathname.replace(/[^/]*$/, '') + `display.html?id=${encodeURIComponent(payload.id)}`; await copy(url); alert('展示链接已复制：\n' + url) })
     document.getElementById('resetBtn').addEventListener('click', () => { state.scores = Array(6).fill(0); state.weights = Array(6).fill(0); dims.forEach((_, i) => { document.getElementById('score' + i).value = 0; document.getElementById('weight' + i).value = 0 }); const ti = document.getElementById('titleInput'); if (ti) ti.value = '综合素质雷达图'; const tg = document.getElementById('tagInput'); if (tg) tg.value = ''; render() })
     window.addEventListener('resize', () => chart.resize()); refreshSumTip();
     // 处理从展示页返回（history back / BFCache）时的状态同步
