--- a/student_pages/index.html
+++ b/student_pages/index.html
@@ -192,6 +192,7 @@
       width: 72px;
       max-width: 40vw;
       text-align: center;
+      font-size: 18px;
       color: var(--text);
       background: rgba(255, 255, 255, .05);
       border: 1px solid rgba(255, 255, 255, .1);
@@ -210,6 +211,10 @@
       gap: 10px;
       margin-top: 14px;
       align-items: center
+    }
+
+    .spacer {
+      flex: 1
     }
 
     button {
@@ -240,18 +245,7 @@
       cursor: not-allowed
     }
 
-    .sum-tip {
-      margin-left: auto;
-      font-variant-numeric: tabular-nums
-    }
 
-    .sum-tip .ok {
-      color: #7CFFB2
-    }
-
-    .sum-tip .bad {
-      color: #ffb3b3
-    }
 
     .chart-card {
       padding: 10px;
@@ -418,7 +412,111 @@
     document.getElementById('submitBtn').addEventListener('click', () => { if (sumWeights() !== 100) { alert('请将六个权重数值调整为合计 100%'); return } const payload = buildPayload(); goDisplay(payload) })
     document.getElementById('resetBtn').addEventListener('click', () => { state.scores = Array(6).fill(0); state.weights = Array(6).fill(0); dims.forEach((_, i) => { document.getElementById('score' + i).value = 0; document.getElementById('weight' + i).value = 0 }); const ti = document.getElementById('titleInput'); if (ti) ti.value = '综合素质雷达图'; const tg = document.getElementById('tagInput'); if (tg) tg.value = ''; render() })
     window.addEventListener('resize', () => chart.resize()); refreshSumTip()
-    // 处理从展示页返回（history back / BFCache）时的状态同步
+
+    // ===== 覆盖和增强（新需求） =====
+    // 1) 取消“权重合计=100%才能提交”的逻辑
+    function refreshSumTip () {
+      const s = sumWeights()
+      const submit = document.getElementById('submitBtn')
+      if (submit) {
+        const canSubmit = s === 100
+        submit.disabled = !canSubmit
+        submit.title = canSubmit ? '' : '成长权重合计需等于 100% 才可提交'
+      }
+    }
+
+    // 2) 学号仅数字；buildPayload 增加 sid 字段
+    function digitsOnly (s) { return String(s || '').replace(/\D/g, '') }
+    function buildPayload () {
+      const titleEl = document.getElementById('titleInput')
+      const tagEl = document.getElementById('tagInput')
+      const sidEl = document.getElementById('studentId')
+      const title = titleEl && titleEl.value ? titleEl.value.trim() : '综合素质雷达图'
+      const tag = tagEl && tagEl.value ? tagEl.value.trim() : ''
+      const sid = sidEl ? digitsOnly(sidEl.value) : ''
+      return { id: genId(), sid, title, tag, dims: [...dims], scores: [...state.scores], weights: [...state.weights], weighted: computeWeighted(), submittedAt: new Date().toISOString(), version: 1 }
+    }
+
+    // 3) 重建操作区：左侧“输入学号”，右侧“提交/重置”
+    ; (function rebuildActions () {
+      const act = document.querySelector('.actions')
+      if (!act) return
+      act.innerHTML = `
+        <label for="studentId" class="sid-label">‼️输入学号：</label>
+        <input id="studentId" class="num" type="text" inputmode="numeric" pattern="\\d*" placeholder="必填" />
+        <div class="spacer"></div>
+        <button id="submitBtn">提交并展示页</button>
+        <button id="resetBtn" class="secondary">重置</button>
+      `
+      const sidInput = document.getElementById('studentId')
+      if (sidInput) sidInput.addEventListener('input', (e) => {
+        const v = digitsOnly(e.target.value); if (v !== e.target.value) e.target.value = v
+      })
+      const reset = document.getElementById('resetBtn')
+      if (reset) reset.addEventListener('click', (e) => {
+        e.stopImmediatePropagation()
+        state.scores = Array(6).fill(0); state.weights = Array(6).fill(0)
+        dims.forEach((_, i) => {
+          const s = document.getElementById('score' + i); if (s) s.value = 0
+          const w = document.getElementById('weight' + i); if (w) w.value = 0
+        })
+        const ti = document.getElementById('titleInput'); if (ti) ti.value = '综合素质雷达图'
+        const tg = document.getElementById('tagInput'); if (tg) tg.value = ''
+        if (sidInput) sidInput.value = ''
+        render()
+      }, { capture: true })
+      refreshSumTip()
+    })()
+
+      // 跨设备提交：在点击提交时，先把数据发送到服务器，再跳转到展示页
+      (function enhanceSubmitForMultiDevice () {
+        const btn = document.getElementById('submitBtn')
+        if (!btn) return
+        btn.addEventListener('click', async (e) => {
+          // 拦截原有监听，避免重复执行
+          e.stopImmediatePropagation()
+          if (sumWeights() !== 100) { alert('请将成长权重各项数值调整为合计 100%'); return }
+          const payload = buildPayload()
+          try {
+            await fetch('/api/submit', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify(payload)
+            })
+          } catch (err) {
+            console.warn('submit failed:', err)
+          }
+          const key = 'radarPayload:' + payload.id
+          localStorage.setItem(key, JSON.stringify(payload))
+          location.href = `display.html?id=${encodeURIComponent(payload.id)}`
+        }, { capture: true })
+      })()
+      // 处理从展示页返回（history back / BFCache）时的状态同步
+      ; (function overrideSubmitHandler () {
+        const oldBtn = document.getElementById('submitBtn')
+        if (!oldBtn) return
+        const btn = oldBtn.cloneNode(true)
+        oldBtn.parentNode.replaceChild(btn, oldBtn)
+      btn.addEventListener('click', async (e) => {
+        e.stopImmediatePropagation()
+        if (sumWeights() !== 100) { alert('请将成长权重各项数值调整为合计 100%'); return }
+        const sidEl = document.getElementById('studentId'); const sidVal = sidEl ? digitsOnly(sidEl.value) : ''
+        if (!sidVal) { alert('请填写学号（仅数字）'); return }
+        const payload = buildPayload()
+        try {
+          await fetch('/api/submit', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(payload)
+          })
+        } catch (err) {
+          console.warn('submit failed:', err)
+        }
+        const key = 'radarPayload:' + payload.id
+        localStorage.setItem(key, JSON.stringify(payload))
+        location.href = `display.html?id=${encodeURIComponent(payload.id)}`
+      }, { capture: true })
+      })()
     window.addEventListener('pageshow', () => { syncStateFromInputs(); render() })
   </script>
 </body>
