--- a/teacher_show/index.html
+++ b/teacher_show/index.html
@@ -66,7 +66,8 @@
       box-shadow: var(--glow);
       padding: 8px;
       cursor: pointer;
-      transition: transform .08s ease
+      transition: transform .08s ease;
+      position: relative
     }
 
     .card:active {
@@ -76,6 +77,19 @@
     .thumb {
       width: 100%;
       height: 220px
+    }
+
+    .slot-index {
+      position: absolute; top: 6px; left: 8px;
+      background: rgba(255,255,255,.14);
+      border: 1px solid rgba(255,255,255,.25);
+      color: #e7f1ff;
+      border-radius: 8px;
+      font-size: 12px;
+      line-height: 1;
+      padding: 4px 6px;
+      pointer-events: none;
+      font-variant-numeric: tabular-nums
     }
 
     .empty {
@@ -237,6 +251,10 @@
       for (let i = 1; i <= SLOTS; i++) {
         const card = document.createElement('div')
         card.className = 'card'
+        const badge = document.createElement('span')
+        badge.className = 'slot-index'
+        badge.textContent = i
+        card.appendChild(badge)
         const el = document.createElement('div')
         el.className = 'thumb'
         card.appendChild(el)
