--- a/student_pages/index.html
+++ b/student_pages/index.html
@@ -443,7 +443,7 @@
       const act = document.querySelector('.actions')
       if (!act) return
       act.innerHTML = `
-        <label for="studentId" class="sid-label">‼️输入学号：</label>
+        <label for="studentId" class="sid-label">‼️输入序号：</label>
         <input id="studentId" class="num" type="text" inputmode="numeric" pattern="\\d*" placeholder="必填" />
         <div class="spacer"></div>
         <button id="submitBtn">提交并展示页</button>
@@ -488,7 +488,7 @@
       return `<table class="matrix">${header}<tbody>${rows}</tbody></table>`
     }
 
-    ;(function rebuildVerticalMatrix () {
+    ; (function rebuildVerticalMatrix () {
       const wrap = document.getElementById('controls')
       if (!wrap) return
       wrap.innerHTML = buildTableVertical()
@@ -498,7 +498,7 @@
     })()
 
       // 跨设备提交：在点击提交时，先把数据发送到服务器，再跳转到展示页
-      ;(function enhanceSubmitForMultiDevice () {
+      ; (function enhanceSubmitForMultiDevice () {
         const btn = document.getElementById('submitBtn')
         if (!btn) return
         btn.addEventListener('click', async (e) => {
@@ -526,25 +526,25 @@
         if (!oldBtn) return
         const btn = oldBtn.cloneNode(true)
         oldBtn.parentNode.replaceChild(btn, oldBtn)
-      btn.addEventListener('click', async (e) => {
-        e.stopImmediatePropagation()
-        if (sumWeights() !== 100) { alert('请将成长权重各项数值调整为合计 100%'); return }
-        const sidEl = document.getElementById('studentId'); const sidVal = sidEl ? digitsOnly(sidEl.value) : ''
-        if (!sidVal) { alert('请填写学号（仅数字）'); return }
-        const payload = buildPayload()
-        try {
-          await fetch('/api/submit', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify(payload)
-          })
-        } catch (err) {
-          console.warn('submit failed:', err)
-        }
-        const key = 'radarPayload:' + payload.id
-        localStorage.setItem(key, JSON.stringify(payload))
-        location.href = `display.html?id=${encodeURIComponent(payload.id)}`
-      }, { capture: true })
+        btn.addEventListener('click', async (e) => {
+          e.stopImmediatePropagation()
+          if (sumWeights() !== 100) { alert('请将成长权重各项数值调整为合计 100%'); return }
+          const sidEl = document.getElementById('studentId'); const sidVal = sidEl ? digitsOnly(sidEl.value) : ''
+          if (!sidVal) { alert('请填写学号（仅数字）'); return }
+          const payload = buildPayload()
+          try {
+            await fetch('/api/submit', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify(payload)
+            })
+          } catch (err) {
+            console.warn('submit failed:', err)
+          }
+          const key = 'radarPayload:' + payload.id
+          localStorage.setItem(key, JSON.stringify(payload))
+          location.href = `display.html?id=${encodeURIComponent(payload.id)}`
+        }, { capture: true })
       })()
     window.addEventListener('pageshow', () => { syncStateFromInputs(); render() })
   </script>
