perf:把面积填充透明度改为 1.0

--- a/student_pages/index.html
+++ b/student_pages/index.html
@@ -365,13 +365,13 @@
         backgroundColor: 'transparent',
         legend: { top: 10, textStyle: { color: '#d7e4ff' } },
         radar: {
-          shape: 'polygon', radius: '70%', indicator: dims.map(d => ({ name: d, max: 100 })), axisName: { color: '#cfe0ff' },
-          splitArea: { areaStyle: { color: ['rgba(62,119,255,0.05)', 'rgba(62,119,255,0.07)', 'rgba(62,119,255,0.08)', 'rgba(62,119,255,0.09)', 'rgba(62,119,255,0.10)'] } },
-          axisLine: { lineStyle: { color: 'rgba(160,200,255,.25)' } }, splitLine: { lineStyle: { color: 'rgba(160,200,255,.25)' } }
+          shape: 'polygon', radius: '70%', indicator: dims.map(d => ({ name: d, max: 100 })), axisName: { color: '#cfe0ff', fontSize: 18 },
+          splitArea: { show: false },
+          axisLine: { show: false }, splitLine: { show: false }
         },
         series: [
-          { name: '成长权重', type: 'radar', data: [growth], areaStyle: { color: 'rgba(58,134,255,.16)' }, lineStyle: { color: '#3a86ff' }, itemStyle: { color: '#3a86ff' } },
-          { name: '自我评价', type: 'radar', data: [weighted], areaStyle: { color: 'rgba(255,77,79,.16)' }, lineStyle: { color: '#ff4d4f' }, itemStyle: { color: '#ff4d4f' } }
+          { name: '成长权重', type: 'radar', data: [growth], symbol: 'none', areaStyle: { color: 'rgba(58,134,255,1)' }, lineStyle: { width: 0 }, itemStyle: { color: '#3a86ff' } },
+          { name: '自我评价', type: 'radar', data: [weighted], symbol: 'none', areaStyle: { color: 'rgba(255,77,79,1)' }, lineStyle: { width: 0 }, itemStyle: { color: '#ff4d4f' } }
         ]
       })
       refreshSumTip()
